--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Creative - Start Bootstrap Theme</title>
+        <title>Tinker Pisa</title>
         <!-- Favicon-->
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Bootstrap Icons-->
@@ -43,7 +43,7 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Il giorno xx settembre presentazione delle attività di Creatività Tecnologica presso le <a href="https://www.google.it/maps/place/Officine+Garibaldi+-+il+Cantiere+delle+Idee/@43.7145735,10.4123092,17z/data=!3m1!4b1!4m5!3m4!1s0x12d59195f6bfb3e5:0x96ca84580bc6eec0!8m2!3d43.7145735!4d10.4123092" style="text-decoration: none;" target="_blank" >Officine Garibaldi di Pisa</a></p>
+                        <p class="text-white-75 mb-5">Il giorno xx settembre alle ore xx:xx presentazione delle attività di Creatività Tecnologica presso le <a href="https://www.google.it/maps/place/Officine+Garibaldi+-+il+Cantiere+delle+Idee/@43.7145735,10.4123092,17z/data=!3m1!4b1!4m5!3m4!1s0x12d59195f6bfb3e5:0x96ca84580bc6eec0!8m2!3d43.7145735!4d10.4123092" style="text-decoration: none; color:orangered" target="_blank" >Officine Garibaldi di Pisa</a></p>
                         <a class="btn btn-light btn-xl" href="pdf/Creativita.Tecnologica.pdf" target="_blank"> Creatività Tecnologica</a>
                     </div>
                 </div>
@@ -81,7 +81,7 @@
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-laptop fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">S.T.E.A.M</h3>
-                            <p class="text-muted mb-0">Scienza, Tecnologia, Ingegneria, Arte e Matematica ci guidano</p>
+                            <p class="text-muted mb-0">Scienza, Tecnologia, Ingegneria, Arte e Matematica </p>
                             <p><a href="https://www.direfareinsegnare.education/didattica/insegnare-le-steam-con-il-tinkering/" target="_blank" style="text-decoration: none;">Vorrei saperne di più</a></p>
                         </div>
                     </div>
@@ -89,7 +89,7 @@
                         <div class="mt-5">
                             <div class="mb-2"><i class="bi-globe fs-1 text-primary"></i></div>
                             <h3 class="h4 mb-2">Meccaniche GDT</h3>
-                            <p class="text-muted mb-0">Le nostre creazioni possono interagire con qualche semplice regola..</p>
+                            <p class="text-muted mb-0">Le nostre creazioni possono interagire con qualche semplice regola</p>
                             <p><a href="https://www.leducazione.it/10-numeri-arretrati/56-il-valore-educativo-dei-giochi-da-tavolo.html" target="_blank" style="text-decoration: none;">Vorrei saperne di più</a></p>
                         </div>
                     </div>
@@ -181,7 +181,7 @@
                     <div class="col-lg-8 col-xl-6 text-center">
                         <h2 class="mt-0">Per qualsiasi dubbio non esitare a contattarci</h2>
                         <hr class="divider" />
-                        <p class="text-muted mb-5">Pulsa il bottone per andare al formulario</p>
+                        <p class="text-muted mb-5">Premi il bottone per andare al formulario</p>
                         <div><a class="btn btn-dark btn-xl" href="https://forms.gle/enPEkMqqK8oGot9Z8" target="_blank"> Contattaci</a></div>
                 </div>
                 </div>
