--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@
         </section>
         <!-- Footer-->
         <footer class="bg-light py-5">
-            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyleft &copy; 2022 - Tinker Pisa</div></div>
+            <div class="container px-4 px-lg-5"><div class="small text-center text-muted">Copyleft 2022 - Tinker Pisa</div></div>
         </footer>
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
