--- a/index.html
+++ b/index.html
@@ -53,9 +53,11 @@
                         <hr class="divider" />
                     </div>
                     <div class="col-lg-8 align-self-baseline">
-                        <p class="text-white-75 mb-5">Il giorno xx settembre alle ore xx:xx presentazione per genitori e bambini  da 6 a 14 anni delle attività educative in Creatività Tecnologica presso le <a href="https://www.google.it/maps/place/Officine+Garibaldi+-+il+Cantiere+delle+Idee/@43.7145735,10.4123092,17z/data=!3m1!4b1!4m5!3m4!1s0x12d59195f6bfb3e5:0x96ca84580bc6eec0!8m2!3d43.7145735!4d10.4123092" style="text-decoration: none; color:orangered" target="_blank" >Officine Garibaldi di Pisa</a> Premi il seguente bottone per iscriverti</p>
+                        <p class="text-white-75 mb-5">Il giorno 7 ottobre alle ore 17:30 presentazione per genitori e bambini  da 6 a 14 anni delle attività educative in Creatività Tecnologica presso le <a href="https://www.google.it/maps/place/Officine+Garibaldi+-+il+Cantiere+delle+Idee/@43.7145735,10.4123092,17z/data=!3m1!4b1!4m5!3m4!1s0x12d59195f6bfb3e5:0x96ca84580bc6eec0!8m2!3d43.7145735!4d10.4123092" style="text-decoration: none; color:orangered" target="_blank" >Officine Garibaldi di Pisa</a> Premi il seguente bottone per iscriverti&#65121;</p>
                         <a class="btn btn-light btn-xl" href="https://forms.gle/zAFv9JNARWdVt9TE7" target="_blank">Premi e iscriviti alla Presentazione</a>
                     </div>
+					<div><p class="text-white-75 mb-5" style="font-size:13px">&#65121; posti limitati, in caso di sovraiscrizioni realizzeremo una presentazione aggiuntiva</p>
+					</div>
                 </div>
             </div>
         </header>
